starter_compiler/parser.output
Grammar

    0 $accept: Program $end

    1 Program: VarDeclList StmtList

    2 VarDeclList: ε
    3            | VarDecl VarDeclList

    4 VarDecl: TYPE ID SEMICOLON

    5 StmtList: ε
    6         | Stmt StmtList

    7 Stmt: ID EQ Expr SEMICOLON
    8     | WRITE ID SEMICOLON

    9 Expr: Expr PLUS Expr
   10     | ID
   11     | NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 4
    ID <string> (259) 4 7 8 10
    SEMICOLON <char> (260) 4 7 8
    EQ <operator> (261) 7
    PLUS <operator> (262) 9
    NUMBER <number> (263) 11
    WRITE <string> (264) 8


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    Program <ast> (11)
        on left: 1
        on right: 0
    VarDeclList <ast> (12)
        on left: 2 3
        on right: 1 3
    VarDecl <ast> (13)
        on left: 4
        on right: 3
    StmtList <ast> (14)
        on left: 5 6
        on right: 1 6
    Stmt <ast> (15)
        on left: 7 8
        on right: 6
    Expr <ast> (16)
        on left: 9 10 11
        on right: 7 9


State 0

    0 $accept: • Program $end

    TYPE  shift, and go to state 1

    $default  reduce using rule 2 (VarDeclList)

    Program      go to state 2
    VarDeclList  go to state 3
    VarDecl      go to state 4


State 1

    4 VarDecl: TYPE • ID SEMICOLON

    ID  shift, and go to state 5


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 6


State 3

    1 Program: VarDeclList • StmtList

    ID     shift, and go to state 7
    WRITE  shift, and go to state 8

    $default  reduce using rule 5 (StmtList)

    StmtList  go to state 9
    Stmt      go to state 10


State 4

    3 VarDeclList: VarDecl • VarDeclList

    TYPE  shift, and go to state 1

    $default  reduce using rule 2 (VarDeclList)

    VarDeclList  go to state 11
    VarDecl      go to state 4


State 5

    4 VarDecl: TYPE ID • SEMICOLON

    SEMICOLON  shift, and go to state 12


State 6

    0 $accept: Program $end •

    $default  accept


State 7

    7 Stmt: ID • EQ Expr SEMICOLON

    EQ  shift, and go to state 13


State 8

    8 Stmt: WRITE • ID SEMICOLON

    ID  shift, and go to state 14


State 9

    1 Program: VarDeclList StmtList •

    $default  reduce using rule 1 (Program)


State 10

    6 StmtList: Stmt • StmtList

    ID     shift, and go to state 7
    WRITE  shift, and go to state 8

    $default  reduce using rule 5 (StmtList)

    StmtList  go to state 15
    Stmt      go to state 10


State 11

    3 VarDeclList: VarDecl VarDeclList •

    $default  reduce using rule 3 (VarDeclList)


State 12

    4 VarDecl: TYPE ID SEMICOLON •

    $default  reduce using rule 4 (VarDecl)


State 13

    7 Stmt: ID EQ • Expr SEMICOLON

    ID      shift, and go to state 16
    NUMBER  shift, and go to state 17

    Expr  go to state 18


State 14

    8 Stmt: WRITE ID • SEMICOLON

    SEMICOLON  shift, and go to state 19


State 15

    6 StmtList: Stmt StmtList •

    $default  reduce using rule 6 (StmtList)


State 16

   10 Expr: ID •

    $default  reduce using rule 10 (Expr)


State 17

   11 Expr: NUMBER •

    $default  reduce using rule 11 (Expr)


State 18

    7 Stmt: ID EQ Expr • SEMICOLON
    9 Expr: Expr • PLUS Expr

    SEMICOLON  shift, and go to state 20
    PLUS       shift, and go to state 21


State 19

    8 Stmt: WRITE ID SEMICOLON •

    $default  reduce using rule 8 (Stmt)


State 20

    7 Stmt: ID EQ Expr SEMICOLON •

    $default  reduce using rule 7 (Stmt)


State 21

    9 Expr: Expr PLUS • Expr

    ID      shift, and go to state 16
    NUMBER  shift, and go to state 17

    Expr  go to state 22


State 22

    9 Expr: Expr • PLUS Expr
    9     | Expr PLUS Expr •

    $default  reduce using rule 9 (Expr)
